Added Base URL and Fixed Vulnerability

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
         <div class="navbar-brand align-item-center d-flex align-items-center">
             <img style="width: 50px;margin-left: 10px;margin-right: 10px;cursor: pointer;" routerLink="/products" src="https://cdn.pixabay.com/photo/2020/01/10/12/49/milk-4755234_640.jpg" alt="">
             <!-- <i  class='fas fa-shipping-fast'></i> -->
-            <strong style="font-size: 30px; cursor: pointer;" routerLink="/products">Duudwale</strong>
+            <strong style="font-size: 30px; cursor: pointer;" routerLink="/products">Dudhwale</strong>
        
             <!-- <div class="form-group">
                 <input type="text" class="form-control" placeholder="Search Products" > 
